update contrast and h1 errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -335,7 +335,7 @@ body {
 }
 
 #headerWrapper {
-  background-color: #4183b6;
+  background-color: #0a4776;
 }
 
 header {
@@ -346,6 +346,7 @@ header {
 }
 header img {
   height: 40px;
+  border-radius: 20px;
 }
 header .tel {
   color: white;
@@ -358,8 +359,8 @@ header .tel {
 
 h1 {
   position: absolute;
-  left: 20px;
-  top: 10;
+  left: 10px;
+  top: 0px;
   padding: 0.5rem 0.7rem;
   border-radius: 10px;
   z-index: 99;
@@ -391,7 +392,7 @@ main .swiper img {
   margin: 0;
   padding: 5px;
   text-align: center;
-  background-color: #4183b6;
+  background-color: #0a4776;
   color: white;
   border-radius: 10px 10px 0 0;
 }
@@ -435,7 +436,7 @@ main .swiper img {
 }
 
 #footerWrapper {
-  background-color: #4183b6;
+  background-color: #0a4776;
 }
 
 footer {
@@ -537,7 +538,7 @@ footer p {
   h1 {
     position: absolute;
     left: 50%;
-    top: 10;
+    top: 10px;
     padding: 0.5rem 0.7rem;
     border-radius: 10px;
     z-index: 99;
