--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 $bodyText: "Lato", sans-serif;
 $titleText: "Titillium Web", sans-serif;
 
-$bgColor: #4183b6;
+$bgColor: #0a4776;
 $accentOrange: #f77926;
 $accentYellow: #f9c455;
 $darkBlue: #316287;
