--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -14,7 +14,7 @@ header {
 h1 {
   position: absolute;
   left: 50%;
-  top: 10;
+  top: 10px;
   padding: 0.5rem 0.7rem;
   border-radius: 10px;
   z-index: 99;
